--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,5 @@
+<app-navbar>
 
+</app-navbar>
 
-<h1>Hello</h1>
-
-<mat-list role="list">
-    <mat-list-item role="listitem" *ngFor="let user of users">
-        {{user.id}} - {{user.userName}}
-    </mat-list-item>
-</mat-list>
+<router-outlet></router-outlet>
